--- a/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
+++ b/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
@@ -40,7 +40,7 @@ But the good answer is few lines longer:
 function ampScript(code) {
     var ampBlock = '\%\%[' + code + ']\%\%';
     Platform.Function.TreatAsContent(ampBlock);
-    return Variable.GetValue('@Response');
+    return Variable.GetValue('@response');
 };
 ```
 
@@ -57,17 +57,17 @@ Instead of writing your AMPScript execution wrapper every time from scratch, her
 Sure, it still uses the `Platform.Function.TreatAsContent()` at its heart, but there are two additional tricks:
 
 1. `var ampBlock = '\%\%[' + code + ']\%\%'`: allows you to write AMPScript without the block symbols and adds them in the last moment. This way, Marketing Cloud will execute your code once you pass it to the `Platform.Function.TreatAsContent()` function. It is essential when you want to [insert SSJS in your AMPScript](#dynamic-ampscript-code).
-2. `return Variable.GetValue('@Response');`: allows you to pull back data from your AMPScript to the SSJS. For it to work, you must `SET` the `@Response` variable in your AMPScript. Whatever value you assign to the `@Response` in the AMPScript context, will be returned to your SSJS context.
+2. `return Variable.GetValue('@response');`: allows you to pull back data from your AMPScript to the SSJS. For it to work, you must `SET` the `@response` variable in your AMPScript. Whatever value you assign to the `@response` in the AMPScript context, will be returned to your SSJS context.
 
-How to use it? Pass the AMPScript code in the function and, if you want to do something with `@Response` value, assign it to an SSJS variable.
+How to use it? Pass the AMPScript code in the function and, if you want to do something with `@response` value, assign it to an SSJS variable.
 
 ```js title="As JavaScript lacks native ProperCase, we can use AMPScript for that"
-var properCaseFullName = ampScript("SET @Response = ProperCase(AttributeValue('fullName'))");
+var properCaseFullName = ampScript("SET @response = ProperCase(AttributeValue('fullName'))");
 ```
 
 :::note You Should Know
 
-Be sure only to use this approach if there is no equivalent SSJS solution, as mixing languages will impact performance. It is crucial for code in the messages that Marketing Cloud will execute on send time.
+Be sure only to use this approach if there is no equivalent SSJS solution, as mixing languages will [impact performance](./ssjs-vs-ampscript-performance.mdx). It is crucial for code in the messages that Marketing Cloud will execute on send time.
 
 For example, if you are only planning to use ProperCase, it might be better to go the RegEx path for significant volume messaging.
 
@@ -84,10 +84,10 @@ Above example is a short and straightforward AMPScript. However, you will need a
 You can do it quickly, by just concatenating strings with `+`.
 
 ```js title="Check whether there is a Campaign in Salesforce called 'WelcomeCampaign2021'"
-var response = ampScript("SET @Retrieve = RetrieveSalesforceObjects("
+var response = ampScript("SET @retrieve = RetrieveSalesforceObjects("
     + "'Campaign', 'Id', 'Name', '=', 'WelcomeCampaign2021') "
-    + "IF RowCount(@Retrieve) > 0 THEN SET @Response = 'true' "
-    + "ELSE SET @Response = 'false' ENDIF");
+    + "IF RowCount(@retrieve) > 0 THEN SET @response = 'true' "
+    + "ELSE SET @response = 'false' ENDIF");
 ```
 
 :::note You Should Know
@@ -105,10 +105,10 @@ Using AMPScript via SSJS not only enables additional features for Server-Side Ja
 ```js {4} title="Same check as above, but for multiple campaigns and output to an array"
 var availableCampaigns = [];
 for (var campaignName in campaignList) {
-    var response = ampScript("SET @Retrieve = RetrieveSalesforceObjects("
+    var response = ampScript("SET @retrieve = RetrieveSalesforceObjects("
         + "'Campaign', 'Id', 'Name', '=', '" + campaignName + "') "
-        + "IF RowCount(@Retrieve) > 0 THEN SET @Response = 'true' "
-        + "ELSE SET @Response = 'false' ENDIF");
+        + "IF RowCount(@retrieve) > 0 THEN SET @response = 'true' "
+        + "ELSE SET @response = 'false' ENDIF");
     if (reponse) availableCampaigns.push(campaignName);
 };
 ```
@@ -126,16 +126,16 @@ The easy example is visible in the [previous section](#dynamic-ampscript-code) -
 But we can go so much farther than that:
 
 ```js {8-9,11,14}
-var response = ampScript("SET @Retrieve = RetrieveSalesforceObjects("
+var response = ampScript("SET @retrieve = RetrieveSalesforceObjects("
     + "'Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True') "
-    + "SET @RowCount = RowCount(@Retrieve) SET @Response = '' "
-    + "IF @RowCount > 0 THEN @Counter = 1 TO @RowCount DO "
-    + "SET @Row = ROW(@Retrieve, @Counter) "
-    + "SET @Name = FIELD(@Row, 'Name') SET @Id = FIELD(@Row, 'Id') "
-    + "SET @StartDate = FIELD(@Row, 'StartDate') SET @EndDate = FIELD(@Row, 'EndDate') "
-    + "SET @RowDate = CONCAT(@Name, ',', @Id, ',', @StartDate, ',', @EndDate) "
-    + "SET @Response = CONCAT(@Response, @RowData,';') "
-    + "NEXT ENDIF");
+    + "SET @rowCount = RowCount(@retrieve) SET @response = '' "
+    + "IF @rowCount > 0 THEN FOR @counter = 1 TO @rowCount DO "
+    + "SET @row = Row(@retrieve, @counter) "
+    + "SET @name = Field(@row, 'Name') SET @id = Field(@row, 'Id') "
+    + "SET @startDate = Field(@row, 'StartDate') SET @endDate = Field(@row, 'EndDate') "
+    + "SET @rowDate = Concat(@name, ',', @id, ',', @startDate, ',', @endDate) "
+    + "SET @response = Concat(@response, @rowData,';') "
+    + "NEXT @counter ENDIF");
 response = response.split(';');
 var campaignData = [];
 for (var i = 0; i < response.length - 1; i++) {
@@ -155,13 +155,13 @@ The first line is easy - we are using `RetrieveSalesforceObjects` function to ge
 
 Next, we have a standard AMPScript way of iterating over the function's outcomes.
 
-Now starts the exciting part - we are creating an AMPScript variable for each field, concatenate it using a comma and then adding it to the end of the `@Response` variable - semicolon-separated.
+Now starts the exciting part - we are creating an AMPScript variable for each field, concatenate it using a comma and then adding it to the end of the `@response` variable - semicolon-separated.
 
 ```css title="Structure of the AMPScript output"
 Name1,Id1,StartDate1,EndDate1;Name2,Id2,StartDate2,EndDate2;Name3,Id3,StartDate3,EndDate3
 ```
 
-As we assigned the final string to `@Response`, the function will return it to the SSJS context.
+As we assigned the final string to `@response`, the function will return it to the SSJS context.
 
 Once it's there, we are leveraging the SSJS by splitting the string on semicolons to create an array of substrings containing each Salesforce Campaign's details.
 
