Update to AMPScript Style Guide along with updates in AMPScript examples

--- a/docs/ampscript/ampscript-style-guide.mdx
+++ b/docs/ampscript/ampscript-style-guide.mdx
@@ -79,9 +79,20 @@ I use `camelCase` for AMPScript variables because:
 3. It is in line with the [SSJS styling for variables](../ssjs/ssjs-style-guide.mdx#js-variables-functions--methods-letter-case) so it's easier to switch between languages.
 
 ```js
+/* ✅ camelCase variable names */
 VAR @response, @salesforceCampaigns, @rowCount
 SET @salesforceCampaigns = RetrieveSalesforceObjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
 SET @rowCount = RowCount(@salesforceCampaigns)
+
+/* ❌ lowercase variable names */
+VAR @response, @salesforcecampaigns, @rowcount
+SET @salesforcecampaigns = RetrieveSalesforceObjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
+SET @rowcount = RowCount(@salesforcecampaigns)
+
+/* ❌ inconsistent case variable names */
+VAR @RESPONSE, @salesforcecampaigns, @RowCount
+SET @salesforcecampaigns = RetrieveSalesforceObjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
+SET @RowCount = RowCount(@salesforcecampaigns)
 ```
 
 #### AMPScript Functions
@@ -95,8 +106,17 @@ I use `PascalCase` for AMPScript functions because:
 3. It is in line with the [SSJS styling for built-in functions](../ssjs/ssjs-style-guide.mdx#ssjs-functions-letter-case) so it's easier to switch between languages.
 
 ```js
+/* ✅ PascalCase variable names */
 SET @salesforceCampaigns = RetrieveSalesforceObjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
 SET @rowCount = RowCount(@salesforceCampaigns)
+
+/* ❌ lowercase function names */
+SET @salesforceCampaigns = retrievesalesforceobjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
+SET @rowCount = rowcount(@salesforceCampaigns)
+
+/* ❌ inconsistent case variable names */
+SET @salesforceCampaigns = retrievesalesforceobjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
+SET @rowCount = ROWCOUNT(@salesforceCampaigns)
 ```
 
 #### AMPScript Loops, Ifs and Variable Declarations
@@ -108,13 +128,14 @@ Despite I recommend `PascalCase` for most of the AMPScript syntax, I believe tha
 I use `UPPERCASE` for three groups of elements:
 
 1. Variable declaration and setting syntax (`VAR` & `SET`).
-2. If statement syntax (`IF`, `THEN` `ELSE`, `ENDIF` but also `IIF`).
+2. If statement syntax (`IF`, `NOT`, `THEN` `ELSEIF`, `ENDIF` and also `IIF`).
 3. Loop syntax (`FOR`, `TO`/`DOWNTO`, `DO`, `NEXT`).
 
-Those three groups are either key datapoints within your AMPScript code (variables) or the only source of real complexity (if statements and for loops). That's why I recommend to improve readability and increase attention around those parts of the script.
+Those three groups are either key datapoints within your AMPScript code (variables) or the only source of real complexity (`IF` statements and `FOR` loops). That's why I recommend to improve readability and increase attention around those parts of the script.
 
 ```js
-VAR @response, @salesforceCampaigns, @rowCount, @counter, @row, @name, @id, @startDate, @endDate, @rowDate, @response
+/* ✅ UPPERCASE for variable desclarations, IF and FOR syntax */
+VAR @response, @salesforceCampaigns, @rowCount, @counter, @row, @name, @id, @startDate, @endDate, @rowData, @response
 SET @salesforceCampaigns = RetrieveSalesforceObjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
 SET @rowCount = RowCount(@salesforceCampaigns)
 
@@ -125,8 +146,213 @@ IF @rowCount > 0 THEN
         SET @id = Field(@row, 'Id')
         SET @startDate = Field(@row, 'StartDate')
         SET @endDate = Field(@row, 'EndDate')
-        SET @rowDate = Concat(@name, ',', @id, ',', @startDate, ',', @endDate)
-        SET @response = Concat(@response, @rowData,';')
+        SET @rowData = Concat(@name, ',', @id, ',', @startDate, ',', @endDate)
+        SET @response = Concat(@response, @rowData, ';')
+    NEXT @counter
+ENDIF
+
+/* ❌ PascalCase for variable desclarations, IF and FOR syntax */
+Var @response, @salesforceCampaigns, @rowCount, @counter, @row, @name, @id, @startDate, @endDate, @rowData, @response
+Set @salesforceCampaigns = RetrieveSalesforceObjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
+Set @rowCount = RowCount(@salesforceCampaigns)
+
+If @rowCount > 0 Then
+    For @counter = 1 To @rowCount Do
+        Set @row = Row(@retrieve, @counter)
+        Set @name = Field(@row, 'Name')
+        Set @id = Field(@row, 'Id')
+        Set @startDate = Field(@row, 'StartDate')
+        Set @endDate = Field(@row, 'EndDate')
+        Set @rowData = Concat(@name, ',', @id, ',', @startDate, ',', @endDate)
+        Set @response = Concat(@response, @rowData, ';')
+    Next @counter
+Endif
+```
+
+### Consistent Quotes
+
+__Use single quote style.__
+
+With AMPScript, you can use either single quotes (`'`) or double quotes (`"`). I prefer the single quotes:
+
+1. I frequently use string variables with HTML that uses double quotes. Using single quotes in SSJS means no need to escape the ones in HTML.
+2. On most keyboard (including mine), it doesn't require pressing Shift each time. Clicking one button is faster.
+
+However, there are many English words using apostrophes, and using double quotes means no need to escape them.
+
+In the end, pick one, align with your team, and stay consistent. Yes, this means updating quotes after copy-pasting from Stack Overflow. RegEx is your friend ;)
+
+```js
+/* ✅ Single Quotes */
+SET @salesforceCampaigns = RetrieveSalesforceObjects('Campaign', 'Name,Id,StartDate,EndDate', 'IsActive', '=', 'True')
+
+/* ❌ Mixed Quotes */
+SET @salesforceCampaigns = RetrieveSalesforceObjects("Campaign", 'Name,Id,StartDate,EndDate', "IsActive", "=", "True")
+```
+
+## Indentation and Spacing
+
+Letter case is just one element of syntax convention that helps with readability. Another important ones are indentation and spacing. AMPScript requires neither, but both can help you write better code.
+
+### Consistent Indentation
+
+__Use indentation to highlight code relationships.__
+
+Indentation in AMPScript is even more important than in SSJS. Without curly brackets, it is the last hope for readability. Indetation will help you quickly understand the relationships between the code lines.
+
+It is straightforward to apply the correct indentation to simplicity of AMPScript. There are just two elements that require it. `IF` statements and `FOR` loops - add indentation level inside of those and get readable code.
+
+```js
+/* ✅ Indented Syntax */
+IF @rowCount > 0 THEN
+    FOR @counter = 1 TO @rowCount DO
+        SET @row = Row(@retrieve, @counter)
+        SET @name = Field(@row, 'Name')
+        SET @id = Field(@row, 'Id')
+        SET @startDate = Field(@row, 'StartDate')
+        SET @endDate = Field(@row, 'EndDate')
+        SET @rowData = Concat(@name, ',', @id, ',', @startDate, ',', @endDate)
+        SET @response = Concat(@response, @rowData, ';')
+    NEXT @counter
+ENDIF
+
+/* ❌ Flat Syntax */
+IF @rowCount > 0 THEN
+FOR @counter = 1 TO @rowCount DO
+SET @row = Row(@retrieve, @counter)
+SET @name = Field(@row, 'Name')
+SET @id = Field(@row, 'Id')
+SET @startDate = Field(@row, 'StartDate')
+SET @endDate = Field(@row, 'EndDate')
+SET @rowData = Concat(@name, ',', @id, ',', @startDate, ',', @endDate)
+SET @response = Concat(@response, @rowData, ';')
+NEXT @counter
+ENDIF
+```
+
+:::note You Should Know
+
+It's safer to use spaces instead of tabs for indentation. And it's more readable to use four spaces instead of two. You can configure your code editor to output four spaces on each Tab click.
+
+:::
+
+### Intentional Spacing
+
+__Use spaces wherever it makes the code more readable.__
+
+To visually separate elements, use spaces:
+
+- Around operators.
+- After commas.
+
+```js
+/* ✅ Intentional spacing */
+IF @rowCount > 0 THEN
+    FOR @counter = 1 TO @rowCount DO
+        SET @rowData = Concat(@name, ',', @id, ',', @startDate, ',', @endDate)
+        SET @response = Concat(@response, @rowData, ';')
+    NEXT @counter
+ENDIF
+
+/* ❌ Lack of spacing */
+IF @rowCount>0 THEN
+    FOR @counter=1 TO @rowCount DO
+        SET @rowData=Concat(@name,',',@id,',',@startDate,',',@endDate)
+        SET @response=Concat(@response,@rowData,';')
     NEXT @counter
 ENDIF
 ```
+
+## Comments
+
+__Code tells you how. Comments tell you why.__ - [Jeff Atwood](https://blog.codinghorror.com/code-tells-you-how-comments-tell-you-why/)
+
+To make your code better, don't stop at just the code. Leverage comments to their full potential. Context, logic and caveats description will improve the experience for everyone - including you after few weeks.
+
+Whenever you build more complex AMPScript code, I recommend using three types of comments: table of contents, section and documentation. For short scripts, the last type will be enough.
+
+### 1. Table of Contents Comment
+
+The first type of comment you should use at the top of your longer scripts is the table of contents comment. This one will be your best friend during the whole lifecycle of your script.
+
+Before even starting to write AMPScript, describe the desired outcome and steps you plan to code to get there. It can be high level; it can be a draft. But it will help you focus on the best way to write your script and consider potential roadblocks or opportunities for optimisation.
+
+As you are building your script - update the comment to reflect the approach you took. It will help you assess the impact of potential changes and find missing pieces.
+
+
+```js
+/* ---------------------------------------------------------------------
+
+Authenticates each visitor to limit access only to SFMC logged-in users.
+
+1. Global Variables - should be updated for each implementation
+2. Authentication Flow
+2.1. Authorisation
+2.2. Authentication with REST Token
+2.2.1. Upsert Logging Data Extension
+
+--------------------------------------------------------------------- */
+```
+
+### 2. Section Comments
+
+To fully leverage the pseudo-code table of contents, add section comments to mark where each part of your code starts.
+
+For complex scripts, it might be a good idea to create few different levels of such comments. I use upper case with dashes for the first level, title case with dashes for the second level and only title case for the third level of comments
+
+```js
+/* ---------------------- 1. GLOBAL VARIABLES ----------------------- */
+
+/* ---------------------- 2. AUTHENTICATION FLOW -------------------- */
+
+/* ---------------------- 2.1. Authorization ------------------------ */
+
+/* ---------------------- 2.2. Authentication ----------------------- */
+
+/* 2.2.1. Build token request payload */
+```
+
+### 3. Documenation Comments
+
+Two previous comment types are suitable for high-level view and organisation of your more complex scripts. But the essential type of comment is the one that goes into detail about the implementation - the documentation comments.
+
+When to write a comment? My rule of thumb is to add them whenever someone else reading your code for the first time would ask a question about context or purpose.
+
+```js
+    /* Capture Session for Authorisation purposes */
+    SET @session = RequestParameter('s')
+
+    /* ---------------------- 2. AUTHENTICATION FLOW -------------------- */
+
+    /* ---------------------- 2.1. Session Validation ------------------------ */
+
+    /* If there is Session parameter, validate it with logging DE*/
+    IF NOT Empty(@session) THEN
+        /* If user was authenticated for another app or if he is not authenticated, redirect to login page */
+        IF Lookup(@authDE, 'appName', 'session', @session) != @appName THEN
+            Redirect(@appURL)
+        ENDIF
+        /* Authenticated users jumps to main code */
+```
+
+## Sum Up
+
+It is a long article, so let's gather all the recommendations in one place:
+
+1. Be consistent
+2. Strive for readability
+3. Use descriptive names to provide context [🔗](#meaningful-names)
+4. Use `camelCase` for variable names [🔗](#ampscript-variable-names)
+5. Use `PascalCase` for function names [🔗](#ampscript-functions)
+6. Use `UPPERCASE` for loops, if blocks and variable decalarations [🔗](#ampscript-loops-ifs-and-variable-declarations)
+7. Use single quote style [🔗](#consistent-quotes)
+8. Use indentation to highlight code relationships [🔗](#consistent-indentation)
+9. Use spaces wherever it makes the code more readable [🔗](#intentional-spacing)
+10. Use comments to provide required context to your script [🔗](#comments)
+
+If you want to share something I'm missing or have arguments for a different recommendation - [let me know](https://www.linkedin.com/in/mateusz-dabrowski-marketing/).
+
+Looking for more Marketing Cloud style? Check out my:
+
+- [SFMC SSJS Style Guide](../ssjs/ssjs-style-guide.mdx).
+- [SFMC SQL Style Guide](../sql/sfmc-sql-style-guide.mdx).
