--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -485,4 +485,7 @@ It is a long article, so let's gather all the recommendations in one place:
 
 If you want to share something I'm missing or have arguments for a different recommendation - [let me know](https://www.linkedin.com/in/mateusz-dabrowski-marketing/).
 
-Looking for more Marketing Cloud style? Check out my [SFMC SQL Style Guide](../sql/sfmc-sql-style-guide.mdx).
+Looking for more Marketing Cloud style? Check out my:
+
+- [AMPScript Style Guide](../ampscript/ampscript-style-guide.mdx).
+- [SFMC SQL Style Guide](../sql/sfmc-sql-style-guide.mdx).
